# trilha-python-dio

./: README.md  estrutura.txt  pyproject.toml  pytest.ini
instance/: blog.sqlite
migrations/versions/: 168ecd2e5b0d_add_acrive_attribute_in_user.py  4b1f23bf4ccc_initial_migration.py  b21539ab690f_.py  bbca19486a08_add_role_table.py
src/: app.py  db.py  utils.py
src/controllers/: auth.py  role.py  user.py
tests/integration/: conftest.py  test_user.py
tests/integration/controllers/: conftest.py  test_user.py
tests/unit/: test_utils.py
